--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "xss-clean": "^0.1.4"
   }
 }
